--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,15 @@
     <title>Titulo del post</title>
 </head>
 <body>
-    <h1>Aqui vamos hacer el blog post</h1>
-    <p> Este es el contenido</p>
-    
+    <div id="container">
+        <div id="post">
+            <h1>Este es el div a
+                tractivo e interesante 
+                del post</h1>
+            <p> Este es el parrafo de 
+                inicio donde vamos explicar las cosas increibles que 
+                se pueden hacer   rama</p>
+        </div>
+    </div>
 </body>
 </html>
