--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,12 @@
             <p> Este es el parrafo de 
                 inicio donde vamos explicar las cosas increibles que 
                 se pueden hacer   rama</p>
+            <p>
+                Los blogs son las mejor formas de compatir
+                imformacion y tu ideas.
+                Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
+                Pero estadisticamente no lo eres... por ahora.
+            </p>
         </div>
     </div>
 </body>
