--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
           Hyperblog
-          <span id="tagline">Tu blog de cabecera</span>
+          <span id="tagline">Tu blog de Mestrias</span>
         </div>
         <div id="post">
             <h1>Este es el div a
@@ -24,6 +24,7 @@
                 imformacion y tu ideas.
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                 Pero estadisticamente no lo eres... por ahora.
+                <p>Suscribite y dale like</p>
             </p>
         </div>
     </div>
